<resources>
    <string name="app_name">Temperature Converter</string>
    <string name="temperature_in_celsius">Temperature in Celsius</string>
    <string name="enter_temperature_here">Enter Temperature here</string>
    <string name="celsius_to_fahrenheit">Celsius            To              Fahrenheit</string>
    <string name="fahrenheit_to_celsius">fahrenheit             To              Celsius</string>
    <string name="convert">Convert</string>
    <string name="_0">0</string>
    <string name="h0">0</string>
    <string name="_h0">0</string>
    <string name="_h00">0</string>
    <string name="convert2">Convert</string>
    <string name="choose_one">Choose One</string>
    <string name="todo">TODO</string>
    <string name="temperature_converter">Temperature Converter</string>
</resources>