<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#AD7DFFD6"
    android:elevation="10dp"
    tools:context=".FahrenheitToCelsius">

    <EditText
        android:id="@+id/input2"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:textSize="70sp"
        android:layout_marginBottom="328dp"
        android:ems="10"
        android:hint="@string/h0"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/result2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/_0"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/input2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonConvert2"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/convert"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:gravity="center"
        android:shadowRadius="7"
        android:shadowColor="@color/black"
        android:shadowDy="7"
        android:shadowDx="-7"
        android:textColor="@color/white"
        app:cornerRadius="50dp"
        android:elevation="30dp"
        android:backgroundTint="#2979FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input2" />

</androidx.constraintlayout.widget.ConstraintLayout>