<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#77E1B1EC"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/choose_one"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonCelsius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="380dp"
        android:backgroundTint="#2979FF"
        android:shadowColor="@color/black"
        android:shadowDx="7"
        android:shadowDy="7"
        android:shadowRadius="7"
        android:text="@string/celsius_to_fahrenheit"
        android:textColor="#FFDD00"
        android:textSize="30sp"
        android:textStyle="bold"
        app:cornerRadius="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonFahrenheit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="156dp"
        android:backgroundTint="#00E676"
        android:shadowColor="@color/black"
        android:shadowDx="7"
        android:shadowDy="7"
        android:shadowRadius="7"
        android:text="@string/fahrenheit_to_celsius"
        android:textColor="#FD4F4F"
        android:textSize="30sp"
        android:textStyle="bold"
        app:cornerRadius="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>